* Added SOCKS4/4a support
* Handle SID_CHATEVENT EID_BROADCAST
* Added lag icons to HTMLOutputEventHandler
* Improved the MirrorSelector
* Improved handling of offline-commands
* Improved BNLS_VERSIONCHECKEX2 timeout behavior
* Reduced schema upgrade verbosity for harmless MergerTokens
* New windows are centered on the screen
* Added a connection configuration wizard

2.1.0 (r1640) 2008-10-06:
* Added BotNet account login
* CDKeys are now dumped to cdkeys.processed.txt in a well-formatted way
* Added /accept and /decline for W3 clan management
* Added a simple clan creation utility
* Added options to customize the GUI font size and family
* Fixed a bug where the version check progress display wouldn't update
* Battle.net info/error messages are marked as such
* Fixed a bug where the ChatQueue wouldn't send ops commands
* Added a telnet plugin compatible with the Battle.net CHAT protocol
* Added 'whisperback' and 'clearqueue' commands
* Added DM, MC, Hex, and Base64 encryption - type /dm, /mc, /hex, or /b64 to toggle
* Added real clan icons (initiate, peon, grunt, shaman, chieftain)
* Fixed a bug in the 'recruits' command (Issue 77)
* Fixed several bugs with the 'whois' command
* Added a Lockdown plugin (requires ops in a clan channel to function)
* Modified the ChatQueue to use priorities
* Added logging of debug, info, and error messages via HTMLOutputEventHandler
* Fixed a bug in the 'mailall' command
* Added timezone support
* Fixed a bug where BotNet would leak in to its own profile tab (Issue 75)
* Fixed a bug that prevented using commands while disconnected (Issue 79)
* Added an 'addalias' command (Issue 82)
* The bot will attempt to re-launch itself after downloading an update
* Added an 'update' command, along with auto-restart
* Fixed a bug where newlines were allowed in settings fields
* Growl will be used in preference of the SystemTray API (OSX/Java6 compatibility)
* Improved the 'add' command to display info about the previous/new ranks